--- a/style.css
+++ b/style.css
@@ -315,15 +315,28 @@ body {
   color: white;
 }
 
+#sm-banner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
 #sm-banner .banner-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  align-items: flex-start;
   background-image: url(img/banner/b17.jpg);
-  width: 580px;
+  min-width: 590px;
   height: 50vh;
+  padding: 30px;
   background-size: cover;
-  background-position: center;
+  background-position: center; 
+}
+
+#sm-banner h4 {
+  color: #fff;
+
 }
